--- a/牛客/牛客必刷题.md
+++ b/牛客/牛客必刷题.md
@@ -6607,3 +6607,233 @@ module.exports = {
 ----
 
 ## **BM84** **最长公共前缀**
+
+编写一个函数来查找字符串数组中的最长公共前缀。
+
+如果不存在公共前缀，返回空字符串 `""`。
+
+#### 纵向扫描
+
+```js
+/**
+  * 
+  * @param strs string字符串一维数组 
+  * @return string字符串
+  */
+function longestCommonPrefix( strs ) {
+    // write code here
+    if (strs.length < 1) {
+        return "";
+    }
+    const len = strs[0].length;
+    const n = strs.length;
+    for (let i = 0; i < len; i++) {
+        for (let j = 1; j < n; j++) {
+            if (i === strs[j].length || strs[j][i] !== strs[0][i]) {
+                return strs[0].substring(0, i);
+            }
+        }
+    }
+    return strs[0];
+}
+module.exports = {
+    longestCommonPrefix : longestCommonPrefix
+};
+```
+
+
+
+#### 二分查找
+
+显然，最长公共前缀的长度不会超过字符串数组中的最短字符串的长度。用 \textit{minLength}minLength 表示字符串数组中的最短字符串的长度，则可以在 [0,\textit{minLength}][0,minLength] 的范围内通过二分查找得到最长公共前缀的长度。每次取查找范围的中间值 \textit{mid}mid，判断每个字符串的长度为 \textit{mid}mid 的前缀是否相同，如果相同则最长公共前缀的长度一定大于或等于 \textit{mid}mid，如果不相同则最长公共前缀的长度一定小于 \textit{mid}mid，通过上述方式将查找范围缩小一半，直到得到最长公共前缀的长度。
+
+```java
+class Solution {
+    public String longestCommonPrefix(String[] strs) {
+        if (strs == null || strs.length == 0) {
+            return "";
+        }
+        int minLength = Integer.MAX_VALUE;
+        for (String str : strs) {
+            minLength = Math.min(minLength, str.length());
+        }
+        int low = 0, high = minLength;
+        while (low < high) {
+            int mid = (high - low + 1) / 2 + low;
+            if (isCommonPrefix(strs, mid)) {
+                low = mid;
+            } else {
+                high = mid - 1;
+            }
+        }
+        return strs[0].substring(0, low);
+    }
+
+    public boolean isCommonPrefix(String[] strs, int length) {
+        String str0 = strs[0].substring(0, length);
+        int count = strs.length;
+        for (int i = 1; i < count; i++) {
+            String str = strs[i];
+            for (int j = 0; j < length; j++) {
+                if (str0.charAt(j) != str.charAt(j)) {
+                    return false;
+                }
+            }
+        }
+        return true;
+    }
+}
+
+```
+
+
+
+
+
+-----
+
+**BM85** **验证IP地址**
+
+给定一个字符串 queryIP。如果是有效的 IPv4 地址，返回 "IPv4" ；如果是有效的 IPv6 地址，返回 "IPv6" ；如果不是上述类型的 IP 地址，返回 "Neither" 。
+
+有效的IPv4地址 是 “x1.x2.x3.x4” 形式的IP地址。 其中 0 <= xi <= 255 且 xi 不能包含 前导零。例如: “192.168.1.1” 、 “192.168.1.0” 为有效IPv4地址， “192.168.01.1” 为无效IPv4地址; “192.168.1.00” 、 “192.168@1.1” 为无效IPv4地址。
+
+一个有效的IPv6地址 是一个格式为“x1:x2:x3:x4:x5:x6:x7:x8” 的IP地址，其中:
+
+1 <= xi.length <= 4
+xi 是一个 十六进制字符串 ，可以包含数字、小写英文字母( 'a' 到 'f' )和大写英文字母( 'A' 到 'F' )。
+在 xi 中允许前导零。
+例如 "2001:0db8:85a3:0000:0000:8a2e:0370:7334" 和 "2001:db8:85a3:0:0:8A2E:0370:7334" 是有效的 IPv6 地址，而 "2001:0db8:85a3::8A2E:037j:7334" 和 "02001:0db8:85a3:0000:0000:8a2e:0370:7334" 是无效的 IPv6 地址。
+
+我们首先查找给定的字符串 \textit{queryIP}queryIP 中是否包含符号 \text{`.'}‘.’。如果包含，那么我们需要判断其是否为 IPv4 地址；如果不包含，我们则判断其是否为 IPv6 地址。
+
+```js
+var validIPAddress = function(queryIP) {
+    if (queryIP.indexOf('.') >= 0) {
+        // IPv4
+        let last = -1;
+        for (let i = 0; i < 4; ++i) {
+            const cur = (i === 3 ? queryIP.length : queryIP.indexOf('.', last + 1));
+            if (cur < 0) {
+                return "Neither";
+            }
+            if (cur - last - 1 < 1 || cur - last - 1 > 3) {
+                return "Neither";
+            }
+            let addr = 0;
+            for (let j = last + 1; j < cur; ++j) {
+                if (!isDigit(queryIP[j])) {
+                    return "Neither";
+                }
+                addr = addr * 10 + (queryIP[j].charCodeAt() - '0'.charCodeAt());
+            }
+            if (addr > 255) {
+                return "Neither";
+            }
+            if (addr > 0 && queryIP[last + 1].charCodeAt() === '0'.charCodeAt()) {
+                return "Neither";
+            }
+            if (addr === 0 && cur - last - 1 > 1) {
+                return "Neither";
+            }
+            last = cur;
+        }
+        return "IPv4";
+    } else {
+        // IPv6
+        let last = -1;
+        for (let i = 0; i < 8; ++i) {
+            const cur = (i === 7 ? queryIP.length : queryIP.indexOf(':', last + 1));
+            if (cur < 0) {
+                return "Neither";
+            }
+            if (cur - last - 1 < 1 || cur - last - 1 > 4) {
+                return "Neither";
+            }
+            for (let j = last + 1; j < cur; ++j) {
+                if (!isDigit(queryIP[j]) && !('a' <= queryIP[j].toLowerCase() && queryIP[j].toLowerCase() <= 'f')) {
+                    return "Neither";
+                }
+            }
+            last = cur;
+        }
+        return "IPv6";
+    }
+};
+
+const isDigit = (ch) => {
+    return parseFloat(ch).toString() === "NaN" ? false : true;
+}
+
+```
+
+
+
+----
+
+## **BM86** **大数加法**
+
+以字符串的形式读入两个数字，编写一个函数计算它们的和，以字符串形式返回。
+
+数据范围：s.length,t.length ≤100000，字符串仅由'0'~‘9’构成
+
+要求：时间复杂度 O(n)
+
+
+
+```js
+/**
+ * 代码中的类名、方法名、参数名已经指定，请勿修改，直接返回方法规定的值即可
+ * 计算两个数之和
+ * @param s string字符串 表示第一个整数
+ * @param t string字符串 表示第二个整数
+ * @return string字符串
+ */
+function solve( s ,  t ) {
+    // write code here
+    let ans = [];
+
+    s = s.split("").reverse();
+    t = t.split("").reverse();
+    if (s.length > t.length) {
+    //确保s是短的一个数字
+    [s, t] = [t, s];
+    }
+    const n = s.length;
+    const m = t.length;
+
+    let ret = 0;
+    let sum = 0;
+    for (let i = 0; i < m; i++) {
+        let a = 0;
+        if (i < n) {
+            a = Number(s[i]);
+        }
+        let b = Number(t[i]);
+        sum = a + b + ret;
+        ret = sum > 9 ? 1 : 0;
+        sum %= 10;
+        ans .unshift(sum);
+    }
+    if (ret > 0) {
+        ans.unshift(1);
+    }
+
+    return ans.join("");
+}
+// let s = "9", t = "99999999999999999999999999999999999999999999999999999999999994";
+// console.log(solve(s, t));
+
+module.exports = {
+    solve : solve
+};
+```
+
+
+
+
+
+---
+
+## **BM87** **合并两个有序的数组**
+
