--- a/image/记录/前端笔试面试总结题目.md
+++ b/image/记录/前端笔试面试总结题目.md
@@ -1901,11 +1901,13 @@ while (T > 0) {
 
 
 
+
        更进一步的研究发现，exDNA在复制时可能产生复制错误，表现为相邻的两个碱基对交换位置，例如12345复制后可能得到13245。由于发生错误的可能性很低，可以认为一段exDNA在复制时至多只会发生一次复制错误。在至多产生一次复制错误的条件下，如果一段exDNA复制后得到的一定是正常exDNA，则称其为安全exDNA；如果复制后可能得到错误exDNA，则称其为不安全exDNA。
     
        例如12445，1，123123都是安全exDNA，2414183，1214，311都是不安全exDNA。
 
  
+
 
 
 
@@ -2334,3 +2336,145 @@ red 3 ,yellow 1, green 2
 
 ----
 
+## 9.4网易笔试
+
+每个数加任意次k后最多有多少数相等
+
+```js
+// 每个数加任意次k后最多有多少数相等
+function solution(nums, n, k){
+    if (k === 1) {
+        return n;
+    }
+    let ans = 1;
+    // nums.sort((a, b) =>a - b);
+    let flag = false;
+    for (let i = 0; i < n; i++) {
+        if (nums[i] === -1) {
+            continue;
+        }
+        if (flag) {
+            break;
+        }
+        let count = 1;
+        flag = true;
+        for (let j = i + 1; j < n; j++) {
+            if (nums[j] === -1) {
+                continue;
+            }
+            flag = false;
+            if (Math.abs(nums[j] - nums[i]) % k === 0) {
+                count++;
+                nums[j] = -1;
+            }
+        }
+        nums[i] = -1;
+        ans = Math.max(ans, count);
+    }
+    return ans;
+}
+
+// console.log(solution([1, 4, 2,3,5], 5, 2));
+
+const [n, k] = readline().trim().split(" ").map(Number);
+const nums = readline().trim().split(" ").map(Number);
+console.log(solution(nums, n, k));
+```
+
+构造01字符串
+
+```js
+// 构造01字符串
+function solution(n, k, t){
+    if (n === 0 || n < k || (k - 1) < t) {
+        return -1;
+    }
+
+    if (k - (n - k) > t + 1) {
+        return -1;
+    }
+    const ans = new Array(t + 1).fill(1);
+    let retK = k - t - 1;
+    let ret = k - t - 1;
+    while (ret > 0) {
+        ret--;
+        ans.push(0);
+        ans.push(1);
+    }
+    ret = n - retK * 2 - t - 1;
+    while (ret > 0) {
+        ret--;
+        ans.push(0);
+    }
+    return ans.join("");
+}
+
+// console.log(solution(10, 5, 0));
+
+const [n, k, t] = readline().trim().split(" ").map(Number);
+console.log(solution(n, k, t));
+```
+
+
+
+任意选数组中元素减k次x后最大值为多少
+
+```js
+// 任意选数组中元素减k次x后最大值为多少
+function solution(nums, n, k, x){
+    if (n === 1) {
+        return nums[0] - k * x;
+    }
+    nums.sort((a, b) => b - a);
+    if (nums[0] - x <= nums[n - 1] && k <= n) {
+        return nums[k - 1] - x;
+    }
+    while (k > 0) {
+        k--;
+        nums[0] -= x;
+        let i = 1;
+        while (i < n && nums[i] > nums[i - 1]) {
+            [nums[i], nums[i - 1]] = [nums[i - 1], nums[i]];
+            i++;
+        }
+    }
+    return nums[0];
+}
+
+
+// console.log(solution([4,3,11,2,2,1], 5, 3, 5));
+
+const [n, k, x] = readline().trim().split(" ").map(Number);
+const nums = readline().trim().split(" ").map(Number);
+console.log(solution(nums, n, k, x));
+```
+
+计算所有子树权值之和
+
+```js
+// 计算所有子树权值之和
+function solution(nums, n){
+    const edges = [];
+    for (let i = 0; i < n - 1; i++) {
+        edges.push(readline().trim().split(" ").map(Number));
+    }
+    return 0;
+}
+
+// console.log(solution(10, 9, 5));
+
+const n = parseInt(readline().trim());
+const nums = readline().trim().split(" ").map(Number);
+
+console.log(solution(nums, n));
+```
+
+
+
+
+
+
+
+-----
+
+## 9.5 招银网络
