--- a/牛客/牛客必刷题.md
+++ b/牛客/牛客必刷题.md
@@ -6837,3 +6837,156 @@ module.exports = {
 
 ## **BM87** **合并两个有序的数组**
 
+给你两个按 非递减顺序 排列的整数数组 nums1 和 nums2，另有两个整数 m 和 n ，分别表示 nums1 和 nums2 中的元素数目。
+
+请你 合并 nums2 到 nums1 中，使合并后的数组同样按 非递减顺序 排列。
+
+注意：最终，合并后数组不应由函数返回，而是存储在数组 nums1 中。为了应对这种情况，nums1 的初始长度为 m + n，其中前 m 个元素表示应合并的元素，后 n 个元素为 0 ，应忽略。nums2 的长度为 n 。
+
+
+
+#### 逆向双指针
+
+可以指针设置为从后向前遍历，每次取两者之中的较大者放进 nums1 的最后面。
+
+```js
+/**
+ * @param {number[]} nums1
+ * @param {number} m
+ * @param {number[]} nums2
+ * @param {number} n
+ * @return {void} Do not return anything, modify nums1 in-place instead.
+ */
+var merge = function(nums1, m, nums2, n) {
+    let p1 = m - 1, p2 = n - 1;
+    let tail = m + n - 1;
+    let cur;
+    while (p1 >= 0 || p2 >= 0) {
+        if (p1 === -1) {
+            cur = nums2[p2--];
+        } else if (p2 === -1) {
+            cur = nums1[p1--];
+        } else if (nums1[p1] > nums2[p2]) {
+            cur = nums1[p1--];
+        } else {
+            cur = nums2[p2--];
+        }
+        nums1[tail--] = cur;
+    }
+};
+```
+
+
+
+
+
+----
+
+## **BM88** **判断是否为回文字符串**
+
+给定一个字符串 `s` ，验证 `s` 是否是 **回文串** ，只考虑字母和数字字符，可以忽略字母的大小写。
+
+本题中，将空字符串定义为有效的 **回文串** 。
+
+####  双指针
+
+```js
+/**
+ * 代码中的类名、方法名、参数名已经指定，请勿修改，直接返回方法规定的值即可
+ * 
+ * @param str string字符串 待判断的字符串
+ * @return bool布尔型
+ */
+function judge( str ) {
+    // write code here
+    let left = 0, right = str.length - 1;
+    while (left < right) {
+        if (str[left++] !== str[right--]) {
+            return false;
+        }
+    }
+    return true;
+}
+module.exports = {
+    judge : judge
+};
+```
+
+
+
+----
+
+## **BM89** **合并区间**
+
+以数组 intervals 表示若干个区间的集合，其中单个区间为 intervals[i] = [starti, endi] 。请你合并所有重叠的区间，并返回 一个不重叠的区间数组，该数组需恰好覆盖输入中的所有区间 。
+
+
+
+#### 排序
+
+如果我们按照区间的左端点排序，那么在排完序的列表中，可以合并的区间一定是连续的。
+
+区间集合，要将重叠区间合并，需要排序，以便找到重叠区间。
+
+对于区间集合进行排序有两个选择，对于左边界或者右边界进行排序。
+
+排序后，找重叠部分，对于左边界进行排序，如果一个区间的右边界大于等于下一个区间的左边界，表明这两个区间有重叠部分，要将前一个区间的右边界拓宽，选择这两个区间中较大的右边界。
+
+如果一个区间的右边界小于下一个区间的左边界，这两个区间没有重叠，将前一个区间加入结果集合中。
+
+遍历结束后还要将最后一个区间加入结果集合中。
+
+
+
+```js
+/**
+ * @param {number[][]} intervals
+ * @return {number[][]}
+ */
+var merge = function(intervals) {
+    if (intervals.length < 1) {
+        return [];
+    }
+    intervals.sort((a, b) => a[0] - b[0]);
+
+    const ans = [intervals[0]];
+    const n = intervals.length;
+    let j = 0;
+
+    for (let i = 1; i < n; i++) {
+        if (ans[j][1] < intervals[i][0]) {
+            ans.push(intervals[i]);
+            j++;
+        } else {
+            ans[j][1] = Math.max(ans[j][1], intervals[i][1]);
+        }
+    }
+    return ans;
+};
+
+let intervals = [[1,3],[2,6],[8,10],[15,18]];
+console.log(merge(intervals));
+```
+
+
+
+----
+
+## **BM90** **最小覆盖子串**
+
+给你一个字符串 s 、一个字符串 t 。返回 s 中涵盖 t 所有字符的最小子串。如果 s 中不存在涵盖 t 所有字符的子串，则返回空字符串 "" 。
+
+ 
+
+```
+输入：s = "ADOBECODEBANC", t = "ABC"
+输出："BANC"
+```
+
+注意：
+
+对于 t 中重复字符，我们寻找的子字符串中该字符数量必须不少于 t 中该字符数量。
+如果 s 中存在这样的子串，我们保证它是唯一的答案。
+
+
+
