--- a/牛客/牛客必刷题.md
+++ b/牛客/牛客必刷题.md
@@ -2499,6 +2499,291 @@ module.exports = {
 
 ## **BM23** **二叉树的前序遍历**
 
+给你二叉树的根节点 root ，返回它节点值的 前序 遍历。
+
+#### 递归
+
+```js
+/**
+ * @param {TreeNode} root
+ * @return {number[]}
+ */
+var preorderTraversal = function(root) {
+    if (root===null) {
+        return [];
+    }
+    let result=[root.val];
+    //递归
+    result=result.concat(preorderTraversal(root.left));
+    result=result.concat(preorderTraversal(root.right));
+    return result;
+};
+```
+
+
+
+#### 迭代
+
+```js
+/**
+ * @param {TreeNode} root
+ * @return {number[]}
+ */
+var preorderTraversal = function(root) {
+    if (root===null) {
+        return [];
+    }
+    let arr=[root];  //栈
+    let result=[];
+    while(arr.length>0){
+        //迭代
+        let node=arr.pop();
+        result.push(node.val);  //出栈
+        if (node.right!==null) {
+            //右子树先入栈确保后访问右子树
+            arr.push(node.right);
+        }
+        if (node.left!==null) {
+            arr.push(node.left);
+        }
+
+    }
+    return result;
+};
+```
+
+
+
+----
+
+## **BM24** **二叉树的中序遍历**
+
+#### 递归
+
+```js
+/**
+ * Definition for a binary tree node.
+ * function TreeNode(val, left, right) {
+ *     this.val = (val===undefined ? 0 : val)
+ *     this.left = (left===undefined ? null : left)
+ *     this.right = (right===undefined ? null : right)
+ * }
+ */
+function TreeNode(val,left,right){
+    this.val=(val===undefined ? 0 : val);
+    this.left=(left===undefined ? null : left);
+    this.right=(right===undefined ? null : right);
+}
+/**
+ * @param {TreeNode} root
+ * @return {number[]}
+ */
+var inorderTraversal = function(root) {
+    
+    if (root===null) {
+        return [];
+    }
+    let result=[];
+
+    result=result.concat(inorderTraversal(root.left));
+    result.push(root.val);
+    result=result.concat(inorderTraversal(root.right));
+    return result;
+};
+
+let test =[1,null,2,3];
+
+let root=new TreeNode(test[0]);
+let result=inorderTraversal(test);
+console.log(result);
+
+
+```
+
+进阶: 递归算法很简单，你可以通过迭代算法完成吗？
+
+#### 迭代
+
+方法一的递归函数我们也可以用迭代的方式实现，两种方式是等价的，区别在于递归的时候隐式地维护了一个栈，而我们在迭代的时候需要显式地将这个栈模拟出来，其他都相同，具体实现可以看下面的代码。
+
+```js
+var inorderTraversal = function(root) {
+    let result=[];
+    let stack=[];
+
+    while(root || stack.length){
+        while(root){
+            stack.push(root);
+            root=root.left;
+        }
+        root=stack.pop();
+        result.push(root.val);
+        root=root.right;
+    }
+    return result;
+};
+```
+
+#### Morris 中序遍历
+
+![Morris 中序遍历二叉树](E:\pogject\学习笔记\image\leetcode\Morris 中序遍历二叉树.png)
+
+```js
+/**
+ * @param {TreeNode} root
+ * @return {number[]}
+ */
+var inorderTraversal = function(root) {
+    let result=[];
+    let predecessor=null;
+
+    while(root){
+        if (root.left) {
+            //predecessor 节点就是当前 root 节点向左走一步，然后一直向右走至无法走为止
+            predecessor=root.left;
+            while(predecessor.right && predecessor.right!==root){
+                predecessor=predecessor.right;
+            }
+            // 让 predecessor 的右指针指向 root，继续遍历左子树
+            if (!predecessor.right) {
+                predecessor.right=root;
+                root=root.left;
+            }else{
+                //说明左子树已经访问完了，我们需要断开链接
+                result.push(root.val);
+                predecessor.right=null;
+                root=root.right;
+            }
+        }else{
+            //如果没有左孩子，则直接访问右孩子
+            result.push(root.val);
+            root=root.right;
+        }
+
+    }
+    return result;
+};
+```
+
+
+
+
+---
+
+## **BM25** **二叉树的后序遍历**
+
+#### 递归
+
+```js
+/**
+ * @param {TreeNode} root
+ * @return {number[]}
+ */
+var postorderTraversal = function(root) {
+    if (root===null) {
+        return [];
+    }
+    let result=[];
+    //递归
+    result=result.concat(postorderTraversal(root.left));
+    result=result.concat(postorderTraversal(root.right));
+    result.push(root.val);
+    return result;
+};
+```
+
+#### 迭代
+
+```js
+/**
+ * @param {TreeNode} root
+ * @return {number[]}
+ */
+var postorderTraversal = function(root) {
+    if (root===null) {
+        return [];
+    }
+    let arr=[root];  //栈
+    let result=[];
+    while(arr.length>0){
+        //反向迭代
+        let node=arr.pop();  //出栈
+        result.unshift(node.val);  //从数组前面进入队列
+        if (node.left!==null) {
+            //左子树先入栈确保先访问右子树
+            arr.push(node.left);
+        }
+        if (node.right!==null) {
+            //后入栈，先访问
+            arr.push(node.right);
+        }
+        
+    }
+    return result;
+};
+```
+
+
+
+----
+
+## **BM26** **求二叉树的层序遍历**
+
+#### 广度优先搜索
+
+```js
+/**
+ * Definition for a binary tree node.
+ * function TreeNode(val, left, right) {
+ *     this.val = (val===undefined ? 0 : val)
+ *     this.left = (left===undefined ? null : left)
+ *     this.right = (right===undefined ? null : right)
+ * }
+ */
+/**
+ * @param {TreeNode} root
+ * @return {number[][]}
+ */
+var levelOrder = function(root) {
+    if (root === null) {
+        return [];
+    }
+    const ans = [];
+
+    let arr = [root];
+    let node = null;
+    let n = 0;  //每一层的结点数
+    while (arr.length > 0){
+        n=arr.length;
+        let temp = [];
+        while (n > 0){
+            node = arr.shift();
+            temp.push(node.val);
+            if (node.left) {
+                arr.push(node.left);
+            }
+            if (node.right) {
+                arr.push(node.right);
+            }
+            n--;
+        }
+        ans.push(temp);
+    }
+
+    return ans;
+};
+```
+
+
+
+----
+
+## **BM27** **按之字形顺序打印二叉树**
+
+
+
+
+
 
 
 
@@ -6987,6 +7272,337 @@ console.log(merge(intervals));
 
 对于 t 中重复字符，我们寻找的子字符串中该字符数量必须不少于 t 中该字符数量。
 如果 s 中存在这样的子串，我们保证它是唯一的答案。
+
+#### 滑动窗口
+
+本问题要求我们返回字符串 ss 中包含字符串 tt 的全部字符的最小窗口。我们称包含 tt 的全部字母的窗口为「可行」窗口。
+
+我们可以用滑动窗口的思想解决这个问题。在滑动窗口类型的问题中都会有两个指针，一个用于「延伸」现有窗口的 rr 指针，和一个用于「收缩」窗口的 ll 指针。在任意时刻，只有一个指针运动，而另一个保持静止。我们在 ss 上滑动窗口，通过移动 rr 指针不断扩张窗口。当窗口包含 tt 全部所需的字符后，如果能收缩，我们就收缩窗口直到得到最小窗口。
+
+如何判断当前的窗口包含所有 tt 所需的字符呢？我们可以用一个哈希表表示 tt 中所有的字符以及它们的个数，用一个哈希表动态维护窗口中所有的字符以及它们的个数，如果这个动态表中包含 tt 的哈希表中的所有字符，并且对应的个数都不小于 tt 的哈希表中各个字符的个数，那么当前的窗口是「可行」的。
+
+处理右指针：
+1.新建左指针，右指针
+2.将输入t的所有字符存入，map中
+3.建立循环，直到右指针到s字符串长度结束
+4.逐位移动右指针
+5.如果need中有当前右指针的字符，need中当前右指针字符对应的value - 1
+6.如果当前右指针字符对应的value === 0 needType -= 1
+7.当needType === 0时候说明已经找到符合要求的子串开始处理左指针
+
+以上处理完右指针，开始处理左指针：
+1.建立循环，直到needType === 0
+2.逐位移动左指针
+3.如果need中有当前左指针的字符，need中当前左指针字符对应的value + 1
+4.并且，need中当前右指针字符对应的value === 1时，needType +=1 退出左指针循环，到外层右指针循环中
+
+以上左右指针都处理好后：
+1.在左指针循环中，通过左右指针作为下标获得子串
+2.比较所得子串的length,最终得到最小子串
+
+注意：对need.size的缓存变量needType是，重要标志
+1.从右指针循环中，needType === 0说明找到符合要求的子串
+2.从左指针循环中，needType !== 0说明移动左指针后的子串中不符合要求了，并且把当前缺少的左指针字符对应的value + 1
+3.重复的在1和2两种情况中切换最终得到所有符合条件的子串
+
+
+
+```js
+/**
+ * @param {string} s
+ * @param {string} t
+ * @return {string}
+ */
+var minWindow = function(s, t) {
+    let l = 0
+    let r = 0
+    const need = new Map()
+    for(let c of t){
+        need.set( c, need.has(c) ? need.get(c) + 1 : 1)
+    }
+
+    let needType = need.size
+    let res = ''
+    while(r < s.length){
+        let c = s[r]
+        if(need.has(c)){
+            need.set( c,need.get(c) -1 )
+            if( need.get(c) === 0) needType -= 1
+        }
+        
+        while(needType === 0){
+            const newRes = s.substring(l,r+1)
+            if( !res || newRes.length < res.length ) res = newRes
+
+            const c2 = s[l]
+            if(need.has(c2)){
+                need.set(c2,need.get(c2) + 1)
+                if( need.get(c2) === 1 ) needType += 1
+            }
+            l += 1
+        }
+        r += 1
+    }
+    return res
+};
+
+
+let s = "ADOBECODEBANC", t = "ABC";
+console.log(minWindow(s, t));
+```
+
+
+
+-----
+
+## **BM91** **反转字符串**
+
+编写一个函数，其作用是将输入的字符串反转过来。输入字符串以字符数组 s 的形式给出。
+
+不要给另外的数组分配额外的空间，你必须原地修改输入数组、使用 O(1) 的额外空间解决这一问题。
+
+```js
+/**
+ * 反转字符串
+ * @param str string字符串 
+ * @return string字符串
+ */
+function solve( str ) {
+    // write code here
+    str = str.split("");
+    let left = 0, right = str.length - 1;
+    while (left < right) {
+        [str[left], str[right]] = [str[right], str[left]];
+        left++;
+        right--;
+    }
+    return str.join("")
+}
+module.exports = {
+    solve : solve
+};
+```
+
+
+
+----
+
+## **BM92** **最长无重复子数组**
+
+给定一个长度为n的数组arr，返回arr的最长无重复元素子数组的长度，无重复指的是所有数字都不相同。
+
+子数组是连续的，比如[1,3,5,7,9]的子数组有[1,3]，[3,5,7]等等，但是[1,3,7]不是子数组
+
+
+
+```js
+/**
+ * 
+ * @param arr int整型一维数组 the array
+ * @return int整型
+ */
+function maxLength( arr ) {
+    // write code here
+    if (arr.length < 2) {
+        return arr.length;
+    }
+    let ans = 0;
+    const n = arr.length;
+    const m = new Map();
+    let left = 0;
+    m.set(arr[0], 0);
+
+    for (let i = 1; i < n; i++) {
+        if (m.has(arr[i])) {
+            ans = Math.max(i - left, ans);
+            if (m.get(arr[i]) >= left) {
+                left = m.get(arr[i]) + 1;
+            }
+        }
+        // console.log(left)
+        m.set(arr[i], i);
+    }
+    ans = Math.max(n - left, ans);
+    return ans;
+}
+
+let arr = [9,9];
+console.log(maxLength(arr))
+
+// module.exports = {
+//     maxLength : maxLength
+// };
+```
+
+
+
+
+
+----
+
+## **BM93** **盛水最多的容器**
+
+给定一个长度为 n 的整数数组 height 。有 n 条垂线，第 i 条线的两个端点是 (i, 0) 和 (i, height[i]) 。
+
+找出其中的两条线，使得它们与 x 轴共同构成的容器可以容纳最多的水。
+
+返回容器可以储存的最大水量。
+
+说明：你不能倾斜容器。
+
+#### 双指针
+
+```js
+/**
+ * 代码中的类名、方法名、参数名已经指定，请勿修改，直接返回方法规定的值即可
+ *
+ * 
+ * @param height int整型一维数组 
+ * @return int整型
+ */
+function maxArea( height ) {
+    // write code here
+    if (height < 2) {
+        return 0;
+    }
+    let left = 0, right = height.length - 1;
+    let ans = 0;
+    while (left < right) {
+        let area = Math.min(height[left], height[right]) * (right - left);
+        ans = Math.max(ans, area);
+        if (height[left] <= height[right]) {
+            left++;
+        } else {
+            right--;
+        }
+    }
+    return ans;
+}
+module.exports = {
+    maxArea : maxArea
+};
+```
+
+
+
+----
+
+## **BM94** **接雨水问题**
+
+给定 `n` 个非负整数表示每个宽度为 `1` 的柱子的高度图，计算按此排列的柱子，下雨之后能接多少雨水。
+
+https://leetcode.cn/problems/trapping-rain-water/solution/jie-yu-shui-by-leetcode-solution-tuvc/
+
+#### **动态规划方法**
+
+找到当前位置左右比两边最大的高度，然后用小的一个高度减当前高度就是当前位置能接到的雨水量
+
+```js
+/**
+ * @param {number[]} height
+ * @return {number}
+ */
+var trap = function(height) {
+    //动态规划方法
+    let n = height.length;
+    let leftMax = new Array(n);
+    let rightMax = new Array(n);
+
+    leftMax[0] = height[0];
+    rightMax[n - 1] = height[n - 1];
+
+    for (let i = 1; i < n; i++) {
+        leftMax[i] = Math.max(leftMax[i - 1], height[i]);
+        rightMax[n - 1 - i] = Math.max(rightMax[n - i], height[n - 1 - i]);
+    }
+
+    let ans = 0;
+    for (let i = 0; i < n; i++) {
+        ans += Math.min(leftMax[i], rightMax[i]) - height[i];
+    }
+    return ans;
+};
+
+let height = [0,1,0,2,1,0,1,3,2,1,2,1];
+console.log(trap(height));
+```
+
+#### **单调栈**
+
+```js
+/**
+ * @param {number[]} height
+ * @return {number}
+ */
+var trap = function(height) {
+    let ans = 0;
+    const stack = [];  // 单调栈存储索引
+    const n = height.length;
+
+    for (let i = 0; i < n; i++) {
+        while (stack.length && height[i] > height[stack[stack.length - 1]]) {
+            const top = stack.pop();
+            if (!stack.length) {
+                break;
+            }
+            const left = stack[stack.length - 1];
+            const currWidth = i - left - 1;
+            const currHeight = Math.min(height[left], height[i]) - height[top];
+            ans += currWidth * currHeight;
+        }
+        stack.push(i);
+    }
+    return ans;
+};
+
+let height = [0,1,0,2,1,0,1,3,2,1,2,1];
+console.log(trap(height));
+```
+
+
+
+#### 双指针
+
+```js
+/**
+ * @param {number[]} height
+ * @return {number}
+ */
+var trap = function(height) {
+    let ans = 0;
+    let left = 0, right = height.length - 1;
+    let leftMax = 0, rightMax = 0;
+
+    while (left < right) {
+        leftMax = Math.max(leftMax, height[left]);
+        rightMax = Math.max(rightMax, height[right]);
+        if (height[left] < height[right]) {
+            ans += leftMax - height[left];
+            left++;
+        } else {
+            ans += rightMax - height[right];
+            right--;
+        }
+    }
+    return ans;
+};
+```
+
+
+
+----
+
+## **BM95** **分糖果问题**
+
+n 个孩子站成一排。给你一个整数数组 ratings 表示每个孩子的评分。
+
+你需要按照以下要求，给这些孩子分发糖果：
+
+- 每个孩子至少分配到 1 个糖果。
+
+- 相邻两个孩子评分更高的孩子会获得更多的糖果。
+
+请你给每个孩子分发糖果，计算并返回需要准备的 最少糖果数目 。
 
 
 
