--- a/牛客/牛客必刷题.md
+++ b/牛客/牛客必刷题.md
@@ -7606,3 +7606,551 @@ n 个孩子站成一排。给你一个整数数组 ratings 表示每个孩子的
 
 
 
+#### 两次遍历
+
+我们可以将「相邻的孩子中，评分高的孩子必须获得更多的糖果」这句话拆分为两个规则，分别处理。
+
+左规则：当 ratings[i−1]<ratings[i] 时，ii 号学生的糖果数量将比 i - 1i−1 号孩子的糖果数量多。
+
+右规则：当 ratings[i]>ratings[i+1] 时，ii 号学生的糖果数量将比 i + 1i+1 号孩子的糖果数量多。
+
+我们遍历该数组两次，处理出每一个学生分别满足左规则或右规则时，最少需要被分得的糖果数量。每个人最终分得的糖果数量即为这两个数量的最大值。
+
+具体地，以左规则为例：我们从左到右遍历该数组，假设当前遍历到位置 ii，如果有 \textit{ratings}[i - 1] < \textit{ratings}[i]ratings[i−1]<ratings[i] 那么 ii 号学生的糖果数量将比 i - 1i−1 号孩子的糖果数量多，我们令 \textit{left}[i] = \textit{left}[i - 1] + 1left[i]=left[i−1]+1 即可，否则我们令 \textit{left}[i] = 1left[i]=1。
+
+在实际代码中，我们先计算出左规则 \textit{left}left 数组，在计算右规则的时候只需要用单个变量记录当前位置的右规则，同时计算答案即可。
+
+```js
+/**
+ * @param {number[]} ratings
+ * @return {number}
+ */
+var candy = function(ratings) {
+    const n = ratings.length;
+    const left = new Array(n).fill(0);
+
+    for (let i = 0; i < n; i++) {
+        if (i > 0 && ratings[i] > ratings[i - 1]) {
+            left[i] = left[i - 1] + 1;
+        } else {
+            left[i] = 1;
+        }
+    }
+
+    let right = 0, ans = 0;
+    for (let i = n - 1; i > -1; i--) {
+        if (i < n - 1 && ratings[i] > ratings[i + 1]) {
+            right++;
+        } else {
+            right = 1;
+        }
+        ans += Math.max(left[i], right);
+    }
+    return ans;
+};
+```
+
+
+
+#### 常数空间遍历
+
+依据前面总结的规律，我们可以提出本题的解法。我们从左到右枚举每一个同学，记前一个同学分得的糖果数量为 \textit{pre}pre：
+
+如果当前同学比上一个同学评分高，说明我们就在最近的递增序列中，直接分配给该同学 \textit{pre} + 1pre+1 个糖果即可。
+
+否则我们就在一个递减序列中，我们直接分配给当前同学一个糖果，并把该同学所在的递减序列中所有的同学都再多分配一个糖果，以保证糖果数量还是满足条件。
+
+我们无需显式地额外分配糖果，只需要记录当前的递减序列长度，即可知道需要额外分配的糖果数量。
+
+同时注意当当前的递减序列长度和上一个递增序列等长时，需要把最近的递增序列的最后一个同学也并进递减序列中。
+
+这样，我们只要记录当前递减序列的长度 \textit{dec}dec，最近的递增序列的长度 \textit{inc}inc 和前一个同学分得的糖果数量 \textit{pre}pre 即可。
+
+```js
+/**
+ * @param {number[]} ratings
+ * @return {number}
+ */
+var candy = function(ratings) {
+    const n = ratings.length;
+    let ans = 1;
+    let inc = 1, dec = 0, pre = 1;
+
+    for (let i = 1; i < n; i++) {
+        if (ratings[i] >= ratings[i - 1]) {
+            dec = 0;
+            if (ratings[i] === ratings[i - 1]) {
+                pre = 1;
+            } else {
+                pre++;
+            }
+            ans += pre;
+            inc = pre;
+        } else {
+            dec++;
+            if (dec === inc) {
+                dec++;
+            }
+            ans += dec;
+            pre = 1;
+        }
+    }
+    return ans;
+};
+
+let ratings = [1,2,2];
+console.log(candy(ratings));
+```
+
+
+
+-----
+
+## **BM96** **主持人调度（二）**
+
+有 n 个活动即将举办，每个活动都有开始时间与活动的结束时间，第 i 个活动的开始时间是 starti ,第 i 个活动的结束时间是 endi ,举办某个活动就需要为该活动准备一个活动主持人。
+
+一位活动主持人在同一时间只能参与一个活动。并且活动主持人需要全程参与活动，换句话说，一个主持人参与了第 i 个活动，那么该主持人在 (starti,endi) 这个时间段不能参与其他任何活动。求为了成功举办这 n 个活动，最少需要多少名主持人。
+
+数据范围: 1 \le n \le 10^51≤*n*≤105 ， -2^{32} \le start_i\le end_i \le 2^{31}-1−232≤*s**t**a**r**t**i*≤*e**n**d**i*≤231−1
+
+复杂度要求：时间复杂度 O(n \log n)*O*(*n*log*n*) ，空间复杂度 O(n)*O*(*n*)
+
+#### 贪心思想
+
+贪心思想属于动态规划思想中的一种，其基本原理是找出整体当中给的每个局部子结构的最优解，并且最终将所有的这些局部最优解结合起来形成整体上的一个最优解。
+
+**思路：**
+
+我们利用贪心思想，什么时候需要的主持人最少？那肯定是所有的区间没有重叠，每个区间首和上一个的区间尾都没有相交的情况，我们就可以让同一位主持人不辞辛劳，一直主持了。但是题目肯定不是这种理想的情况，那我们需要对交叉部分，判断需要增加多少位主持人。
+
+**具体做法：**
+
+- step 1: 利用辅助数组获取单独各个活动开始的时间和结束时间，然后分别开始时间和结束时间进行排序，方便后面判断是否相交。
+- step 2: 遍历nn*n*个活动，如果某个活动开始的时间大于之前活动结束的时候，当前主持人就够了，活动结束时间往后一个。
+- step 3: 若是出现之前活动结束时间晚于当前活动开始时间的，则需要增加主持人。
+
+```js
+/**
+ * 代码中的类名、方法名、参数名已经指定，请勿修改，直接返回方法规定的值即可
+ *
+ * 计算成功举办活动需要多少名主持人
+ * @param n int整型 有n个活动
+ * @param startEnd int整型二维数组 startEnd[i][0]用于表示第i个活动的开始时间，startEnd[i][1]表示第i个活动的结束时间
+ * @return int整型
+ */
+function minmumNumberOfHost( n ,  startEnd ) {
+    // write code here
+    const start = new Array(n);
+    const end = new Array(n);
+
+    //分别得到活动起始时间
+    for (let i = 0; i < n; i++) {
+        start[i] = startEnd[i][0];
+        end[i] = startEnd[i][1];
+    }
+    // 排序
+    start.sort((a, b) => a - b);
+    end.sort((a, b) => a - b);
+
+    let ans = 0;
+    let j = 0;
+    for (let i = 0; i < n; i++) {
+        //新开始的节目大于上一轮结束的时间，主持人不变
+        if (start[i] >= end[j]) {
+            j++;
+        } else {
+            // 主持人增加
+            ans++;
+        }
+    }
+    return ans;
+}
+
+// let n = 2, startEnd = [[1,3],[2,4]];
+// console.log(minmumNumberOfHost(n, startEnd));
+
+module.exports = {
+    minmumNumberOfHost : minmumNumberOfHost
+};
+```
+
+
+
+----
+
+## **BM97** **旋转数组**
+
+一个数组A中存有 n 个整数，在不允许使用另外数组的前提下，将每个整数循环向右移 M（ M >=0）个位置，即将A中的数据由（A0 A1 ……AN-1 ）变换为（AN-M …… AN-1 A0 A1 ……AN-M-1 ）（最后 M 个数循环移至最前面的 M 个位置）。如果需要考虑程序移动数据的次数尽量少，要如何设计移动的方法？
+
+数据范围：0 < n \le 1000<*n*≤100，0 \le m \le 10000≤*m*≤1000
+
+进阶：空间复杂度 O(1)*O*(1)，时间复杂度 O(n)*O*(*n*)
+
+**题目主要信息:**
+
+- 一个长度为nn*n*的数组，将数组整体循环右移mm*m*个位置（mm*m*可能大于nn*n*）
+- 循环右移即最后mm*m*个元素放在数组最前面，前n−mn-m*n*−*m*个元素依次后移
+- 不能使用额外的数组空间
+
+#### 三次翻转
+
+循环右移相当于从第m个位置开始，左右两部分视作整体翻转。即abcdefg右移3位efgabcd可以看成AB翻转成BA（这里小写字母看成数组元素，大写字母看成整体）。既然是翻转我们就可以用到reverse函数。
+
+**具体做法:**
+
+- step 1：因为m可能大于n，因此需要对n取余，因为每次长度为n的旋转数组相当于没有变化。
+- step 2：第一次将整个数组翻转，得到数组的逆序，它已经满足了右移的整体出现在了左边。
+- step 3：第二次就将左边的m个元素单独翻转，因为它虽然移到了左边，但是逆序了。
+- step 4：第三次就将右边的n−m个元素单独翻转，因此这部分也逆序了。
+
+```js
+/**
+ * 旋转数组
+ * @param n int整型 数组长度
+ * @param m int整型 右移距离
+ * @param a int整型一维数组 给定数组
+ * @return int整型一维数组
+ */
+function solve( n ,  m ,  a ) {
+    if (n < 2 || m === 0) {
+        return a;
+    }
+    //取余，因为每次长度为n的旋转数组相当于没有变化
+    m = m % n;
+    //第一次逆转全部数组元素
+    reverse(a, 0, n - 1);
+    //第二次只逆转开头m个
+    reverse(a, 0, m - 1);
+    //第三次只逆转结尾m个
+    reverse(a, m, n - 1);
+
+    return a;
+}
+
+const reverse = (arr, start, end) => {
+    while (start < end) {
+        [arr[start], arr[end]] = [arr[end], arr[start]];
+        start++;
+        end--;
+    }
+}
+
+// let nums = [1,2,3,4,5,6];
+// console.log(solve(6, 2, nums));
+
+module.exports = {
+    solve : solve
+};
+```
+
+
+
+-----
+
+## **BM98** **螺旋矩阵**
+
+给你一个 `m` 行 `n` 列的矩阵 `matrix` ，请按照 **顺时针螺旋顺序** ，返回矩阵中的所有元素。
+
+#### 按层模拟
+
+可以将矩阵看成若干层，首先输出最外层的元素，其次输出次外层的元素，直到输出最内层的元素。
+
+定义矩阵的第 k*k* 层是到最近边界距离为 k*k* 的所有顶点。
+
+对于每层，从左上方开始以顺时针的顺序遍历所有元素。假设当前层的左上角位于 (\textit{top}, \textit{left})(top,left)，右下角位于 (\textit{bottom}, \textit{right})(bottom,right)，按照如下顺序遍历当前层的元素。
+
+从左到右遍历上侧元素，依次为 (\textit{top}, \textit{left})(top,left) 到 (\textit{top}, \textit{right})(top,right)。
+
+从上到下遍历右侧元素，依次为 (\textit{top} + 1, \textit{right})(top+1,right) 到 (\textit{bottom}, \textit{right})(bottom,right)。
+
+如果 \textit{left} < \textit{right}left<right 且 \textit{top} < \textit{bottom}top<bottom，则从右到左遍历下侧元素，依次为 (\textit{bottom}, \textit{right} - 1)(bottom,right−1) 到 (\textit{bottom}, \textit{left} + 1)(bottom,left+1)，以及从下到上遍历左侧元素，依次为 (\textit{bottom}, \textit{left})(bottom,left) 到 (\textit{top} + 1, \textit{left})(top+1,left)。
+
+遍历完当前层的元素之后，将 \textit{left}left 和 \textit{top}top 分别增加 11，将 \textit{right}right 和 \textit{bottom}bottom 分别减少 11，进入下一层继续遍历，直到遍历完所有元素为止。
+
+```js
+/**
+ * @param {number[][]} matrix
+ * @return {number[]}
+ */
+var spiralOrder = function(matrix) {
+    if (!matrix.length || !matrix[0].length) {
+        return [];
+    }
+
+    const m = matrix.length, n = matrix[0].length;
+    const order = [];
+
+    let left = 0, right = n - 1, top = 0, bottom = m - 1;
+    while (left <= right && top <= bottom) {
+        for (let col = left; col <= right; col++) {
+            order.push(matrix[top][col]);  // 从左到右
+        }
+        for (let row = top + 1; row <= bottom; row++) {
+            order.push(matrix[row][right]);  // 从上到下
+        }
+        if (left < right && top < bottom) {
+            for (let col = right - 1; col > left; col--) {
+                order.push(matrix[bottom][col]);  // 从右到左
+            }
+            for (let row = bottom; row > top; row--) {
+                order.push(matrix[row][left]);  // 从下到上
+            }
+        }
+        [left, right, top, bottom] = [left + 1, right - 1, top + 1, bottom - 1];
+    }
+
+    return order;
+};
+
+let matrix = [[1,2,3],[4,5,6],[7,8,9]];
+console.log(spiralOrder(matrix));
+```
+
+时间复杂度：O(mn)O(mn)，其中 mm 和 nn 分别是输入矩阵的行数和列数。矩阵中的每个元素都要被访问一次。
+
+空间复杂度：O(1)O(1)。除了输出数组以外，空间复杂度是常数。
+
+
+
+----
+
+## **BM99** **顺时针旋转矩阵**
+
+给你一幅由 `N × N` 矩阵表示的图像，其中每个像素的大小为 4 字节。请你设计一种算法，将图像旋转 90 度。
+
+不占用额外内存空间能否做到？
+
+#### 原地旋转
+
+```js
+/**
+ * @param {number[][]} matrix
+ * @return {void} Do not return anything, modify matrix in-place instead.
+ */
+var rotate = function(matrix) {
+    const n = matrix.length;
+    for (let i = 0; i < Math.floor(n / 2); i++) {
+        for (let j = 0; j < Math.floor((n + 1) / 2); j++) {
+            const temp = matrix[i][j];
+            matrix[i][j] = matrix[n - j - 1][i];
+            matrix[n - j - 1][i] = matrix[n - i - 1][n - j - 1];
+            matrix[n - i - 1][n - j - 1] = matrix[j][n - i - 1];
+            matrix[j][n - i - 1] = temp;
+        }
+    }
+    return matrix;
+};
+
+let matrix = [[1,2,3],[4,5,6],[7,8,9]];
+console.log(rotate(matrix));
+```
+
+
+
+#### 用翻转代替旋转
+
+```js
+var rotate = function(matrix) {
+    const n = matrix.length;
+    // 水平翻转
+    for (let i = 0; i < Math.floor(n / 2); i++) {
+        for (let j = 0; j < n; j++) {
+            [matrix[i][j], matrix[n - i - 1][j]] = [matrix[n - i - 1][j], matrix[i][j]];
+        }
+    }
+    // 主对角线翻转
+    for (let i = 0; i < n; i++) {
+        for (let j = 0; j < i; j++) {
+            [matrix[i][j], matrix[j][i]] = [matrix[j][i], matrix[i][j]];
+        }
+    }
+};
+
+```
+
+
+
+----
+
+## **BM100** **设计LRU缓存结构**
+
+请你设计并实现一个满足  LRU (最近最少使用) 缓存 约束的数据结构。
+
+实现 LRUCache 类：
+
+- LRUCache(int capacity) 以 正整数 作为容量 capacity 初始化 LRU 缓存
+- int get(int key) 如果关键字 key 存在于缓存中，则返回关键字的值，否则返回 -1 。
+- void put(int key, int value) 如果关键字 key 已经存在，则变更其数据值 value ；如果不存在，则向缓存中插入该组 key-value 。如果插入操作导致关键字数量超过 capacity ，则应该 逐出 最久未使用的关键字。
+
+函数 get 和 put 必须以 O(1) 的平均时间复杂度运行。
+
+#### 哈希表 
+
+```js
+/**
+ * @param {number} capacity
+ */
+var LRUCache = function(capacity) {
+    this.capacity = capacity;
+    this.map = new Map();
+};
+
+/** 
+ * @param {number} key
+ * @return {number}
+ */
+LRUCache.prototype.get = function(key) {
+    if (this.map.has(key)) {
+        let value = this.map.get(key);
+        // 重新set，相当于更新到 map最后
+        this.map.delete(key);
+        this.map.set(key, value);
+        return value;
+    }
+    return -1;
+};
+
+/** 
+ * @param {number} key 
+ * @param {number} value
+ * @return {void}
+ */
+LRUCache.prototype.put = function(key, value) {
+    // 如果有，就删了再赋值
+    if (this.map.has(key)) {
+        this.map.delete(key);
+    }
+    this.map.set(key, value);
+    // 判断是不是容量超了，淘汰机制
+    if (this.map.size > this.capacity) {
+        this.map.delete(this.map.keys().next().value);
+    }
+};
+
+/**
+ * Your LRUCache object will be instantiated and called as such:
+ * var obj = new LRUCache(capacity)
+ * var param_1 = obj.get(key)
+ * obj.put(key,value)
+ */
+```
+
+
+
+----
+
+## **BM101** **设计LFU缓存结构**
+
+请你为 最不经常使用（LFU）缓存算法设计并实现数据结构。
+
+实现 LFUCache 类：
+
+- LFUCache(int capacity) - 用数据结构的容量 capacity 初始化对象
+- int get(int key) - 如果键 key 存在于缓存中，则获取键的值，否则返回 -1 。
+- void put(int key, int value) - 如果键 key 已存在，则变更其值；如果键不存在，请插入键值对。当缓存达到其容量 capacity 时，则应该在插入新项之前，移除最不经常使用的项。在此问题中，当存在平局（即两个或更多个键具有相同使用频率）时，应该去除 最近最久未使用 的键。
+
+为了确定最不常使用的键，可以为缓存中的每个键维护一个 使用计数器 。使用计数最小的键是最久未使用的键。
+
+当一个键首次插入到缓存中时，它的使用计数器被设置为 1 (由于 put 操作)。对缓存中的键执行 get 或 put 操作，使用计数器的值将会递增。
+
+函数 get 和 put 必须以 O(1) 的平均时间复杂度运行。
+
+#### 双哈希表
+
+```js
+/**
+ * @param {number} capacity
+ */
+var LFUCache = function(capacity) {
+    this.capacity = capacity;
+    // 缓存存储
+    this.values = new Map();  // key:value
+    this.times = new Map();  // key:次数
+
+    // 找到当前次数最小的 key
+    // useMap 更新的逻辑，其实 vue 的响应式依赖管理很像
+    this.useMap = new Map();  // 次数：set(key)
+    this.min = 0;  // 最小次数是多少
+};
+
+LFUCache.prototype.updateContent = function(key) {
+    let time = this.times.get(key);
+    let useSet = this.useMap.get(time);
+
+    if (this.min === time && useSet.size === 1) {
+        //当前次数是最小值 并且 这个次数set集合只有一个 key
+        this.min += 1;
+    }
+    time += 1;
+    useSet.delete(key);
+    useSet = this.useMap.get(time) || new Set();
+    useSet.add(key);
+
+    this.useMap.set(time, useSet);
+    this.times.set(key, time);
+};
+
+/** 
+ * @param {number} key
+ * @return {number}
+ */
+LFUCache.prototype.get = function(key) {
+    if (this.values.has(key)) {
+        // 更新计数
+        this.updateContent(key);
+        return this.values.get(key);
+    }
+    return -1;
+};
+
+/** 
+ * @param {number} key 
+ * @param {number} value
+ * @return {void}
+ */
+LFUCache.prototype.put = function(key, value) {
+    // 缓存空间为 0，不操作
+    if (this.capacity === 0) {
+        return;
+    }
+    if (this.values.has(key)) {
+        // key值存在，不需要淘汰
+        this.values.set(key, value);
+        this.updateContent(key);
+    } else {
+        // key值不存在，判断是否超过缓存 size 
+        if (this.capacity === this.values.size) {
+            // 满了需要淘汰掉 次数最少的、最长时间未访问的
+            let minSet = this.useMap.get(this.min);
+            let minKey = minSet.keys().next().value;
+            minSet.delete(minKey);
+            this.values.delete(minKey);
+            this.times.delete(minKey);
+        }
+
+        // 加入缓存
+        this.values.set(key, value);
+        // 这个数据出现了 1 次
+        let useSet = this.useMap.get(1) || new Set();
+        useSet.add(key);
+        this.useMap.set(1, useSet);
+        this.times.set(key, 1);
+        this.min = 1;
+    }
+};
+
+/**
+ * Your LFUCache object will be instantiated and called as such:
+ * var obj = new LFUCache(capacity)
+ * var param_1 = obj.get(key)
+ * obj.put(key,value)
+ */
+```
+
+
+
+
+
+----
+
