--- a/牛客/牛客必刷题.md
+++ b/牛客/牛客必刷题.md
@@ -2780,7 +2780,443 @@ var levelOrder = function(root) {
 
 ## **BM27** **按之字形顺序打印二叉树**
 
+给你二叉树的根节点 `root` ，返回其节点值的 **锯齿形层序遍历** 。（即先从左往右，再从右往左进行下一层遍历，以此类推，层与层之间交替进行）。
 
+#### 广度优先遍历
+
+为了满足题目要求的返回值为「先从左往右，再从右往左」交替输出的锯齿形，我们可以利用「双端队列」的数据结构来维护当前层节点值输出的顺序。
+
+双端队列是一个可以在队列任意一端插入元素的队列。在广度优先搜索遍历当前层节点拓展下一层节点的时候我们仍然从左往右按顺序拓展，但是对当前层节点的存储我们维护一个变量 isOrderLeft 记录是从左至右还是从右至左的：
+
+- 如果从左至右，我们每次将被遍历到的元素插入至双端队列的末尾。
+
+- 如果从右至左，我们每次将被遍历到的元素插入至双端队列的头部。
+
+
+当遍历结束的时候我们就得到了答案数组。
+
+
+
+```js
+/**
+ * Definition for a binary tree node.
+ * function TreeNode(val, left, right) {
+ *     this.val = (val===undefined ? 0 : val)
+ *     this.left = (left===undefined ? null : left)
+ *     this.right = (right===undefined ? null : right)
+ * }
+ */
+/**
+ * @param {TreeNode} root
+ * @return {number[][]}
+ */
+var zigzagLevelOrder = function(root) {
+    if (root === null) {
+        return [];
+    }
+    const ans = [];
+    const queue = [root];
+    let isOrderLeft = true;
+    while (queue.length) {
+        let n = queue.length;
+        const temp = [];
+        while (n > 0) {
+            n--;
+            let node = queue.shift();
+            
+            if (isOrderLeft) {
+                temp.push(node.val);
+            } else {
+                temp.unshift(node.val);
+            }
+            if (node.left !== null) {
+                queue.push(node.left);
+            }
+            if (node.right !== null) {
+                queue.push(node.right);
+            }
+        }
+        ans.push(temp);
+        isOrderLeft = !isOrderLeft;
+    }
+    return ans;
+};
+```
+
+
+
+----
+
+## **BM28** **二叉树的最大深度**
+
+给定一个二叉树，找出其最大深度。
+
+二叉树的深度为根节点到最远叶子节点的最长路径上的节点数。
+
+说明: 叶子节点是指没有子节点的节点。
+
+#### 深度优先搜索
+
+如果我们知道了左子树和右子树的最大深度 l 和 r，那么该二叉树的最大深度即为 max(l,r)+1
+
+而左子树和右子树的最大深度又可以以同样的方式进行计算。因此我们可以用「深度优先搜索」的方法来计算二叉树的最大深度。具体而言，在计算当前二叉树的最大深度时，可以先递归计算出其左子树和右子树的最大深度，然后在 O(1) 时间内计算出当前二叉树的最大深度。递归在访问到空节点时退出。
+
+```js
+/**
+ * Definition for a binary tree node.
+ * function TreeNode(val, left, right) {
+ *     this.val = (val===undefined ? 0 : val)
+ *     this.left = (left===undefined ? null : left)
+ *     this.right = (right===undefined ? null : right)
+ * }
+ */
+/**
+ * @param {TreeNode} root
+ * @return {number}
+ */
+var maxDepth = function(root) {
+    if (root===null) { return 0; }
+    if (root.left===null && root.right===null) {
+        return 1;
+    }else{
+        return 1+ Math.max(maxDepth(root.left), maxDepth(root.right));
+    }
+};
+```
+
+
+
+#### 广度优先搜索
+
+我们也可以用「广度优先搜索」的方法来解决这道题目，但我们需要对其进行一些修改，此时我们广度优先搜索的**队列里存放的是「当前层的所有节点」**。每次拓展下一层的时候，不同于广度优先搜索的每次只从队列里拿出一个节点，我们**需要将队列里的所有节点都拿出来进行拓展，这样能保证每次拓展完的时候队列里存放的是当前层的所有节点，即我们是一层一层地进行拓展**，最后我们用一个变量 ans 来维护拓展的次数，该二叉树的最大深度即为 ans。
+
+```js
+var maxDepth = function(root) {
+    if (root===null) { return 0; }
+    if (root.left===null && root.right===null) {
+        return 1;
+    }
+    let arr=[root];
+    let count=0;
+    while(arr.length>0){
+        let len=arr.length;
+        while(len>0){
+            //需要将队列里的所有节点都拿出来进行拓展
+            node=arr.shift();
+            if (node.left!==null) {
+                //加入的这层在下一次外循环拿出判断
+                arr.push(node.left);
+            }
+            if (node.right!==null) {
+                arr.push(node.right);
+            }
+            len--;
+        }
+        count++;
+    }
+    return count;
+};
+```
+
+
+
+
+
+----
+
+## **BM29** **二叉树中和为某一值的路径(一)**
+
+给你二叉树的根节点 root 和一个整数目标和 targetSum ，找出所有 从根节点到叶子节点 路径总和等于给定目标和的路径。
+
+叶子节点 是指没有子节点的节点。
+
+#### 递归
+
+```js
+/**
+ * Definition for a binary tree node.
+ * function TreeNode(val, left, right) {
+ *     this.val = (val===undefined ? 0 : val)
+ *     this.left = (left===undefined ? null : left)
+ *     this.right = (right===undefined ? null : right)
+ * }
+ */
+/**
+ * @param {TreeNode} root
+ * @param {number} target
+ * @return {number[][]}
+ */
+var pathSum = function(root, target) {
+    const ans = [];
+    const path = [];
+
+    const dfs = (root, res) => {
+        if (root === null) {
+            return;
+        }
+        path.push(root.val);
+        res -= root.val;
+        if (root.left === null && root.right === null && res === 0) {
+            ans.push([...path]); // 这里记得解构，不然传入的是地址
+        }
+        dfs(root.left, res);
+        dfs(root.right, res);
+        path.pop();
+    }
+    dfs(root, target);
+    return ans;
+};
+
+```
+
+
+
+----
+
+## **BM30** **二叉搜索树与双向链表**
+
+输入一棵二叉搜索树，将该二叉搜索树转换成一个排序的循环双向链表。要求不能创建任何新的节点，只能调整树中节点指针的指向。
+
+二叉搜索树的中序遍历为 **递增序列** 。
+
+![二叉搜索树与双向链表](E:\pogject\学习笔记\image\niuke\二叉搜索树与双向链表.png)
+
+```js
+/**
+ * // Definition for a Node.
+ * function Node(val,left,right) {
+ *    this.val = val;
+ *    this.left = left;
+ *    this.right = right;
+ * };
+ */
+/**
+ * @param {Node} root
+ * @return {Node}
+ */
+var treeToDoublyList = function(root) {
+    if (root === null) {
+        return null;
+    }
+    let tail = null, head = null;
+    dfs(root);
+    // 头尾指针
+    head.left = tail;
+    tail.right = head;
+
+    return head;
+
+    function dfs(curr){
+        if (curr === null) {
+            return;
+        }
+        dfs(curr.left);
+        if (tail === null) {
+            head = curr;
+        } else {
+            tail.right = curr;
+            curr.left = tail;
+        }
+        tail = curr;
+        dfs(curr.right);
+    }
+};
+```
+
+
+
+----
+
+## **BM31** **对称的二叉树**
+
+请实现一个函数，用来判断一棵二叉树是不是对称的。如果一棵二叉树和它的镜像一样，那么它是对称的。
+
+我们可以实现这样一个递归函数，通过「同步移动」两个指针的方法来遍历这棵树，p 指针和 q 指针一开始都指向这棵树的根，随后 p 右移时，q 左移，p 左移时，q 右移。每次检查当前 p 和 q 节点的值是否相等，如果相等再判断左右子树是否对称。
+
+```js
+/**
+ * Definition for a binary tree node.
+ * function TreeNode(val) {
+ *     this.val = val;
+ *     this.left = this.right = null;
+ * }
+ */
+/**
+ * @param {TreeNode} root
+ * @return {boolean}
+ */
+var isSymmetric = function(root) {
+    return check(root, root);
+};
+
+const check = (p, q) => {
+    if (p === null && q === null) {
+        return true;
+    }
+    if (p === null || q === null) {
+        return false;
+    }
+    return p.val === q.val && check(p.left, q.right) && check(p.right, q.left);
+}
+```
+
+用递归的方法实现了对称性的判断，那么如何用迭代的方法实现呢？首先我们引入一个队列，这是把递归程序改写成迭代程序的常用方法。初始化时我们把根节点入队两次。每次提取两个结点并比较它们的值（队列中每两个连续的结点应该是相等的，而且它们的子树互为镜像），然后将两个结点的左右子结点按相反的顺序插入队列中。当队列为空时，或者我们检测到树不对称（即从队列中取出两个不相等的连续结点）时，该算法结束。
+
+```js
+/**
+ * Definition for a binary tree node.
+ * function TreeNode(val) {
+ *     this.val = val;
+ *     this.left = this.right = null;
+ * }
+ */
+/**
+ * @param {TreeNode} root
+ * @return {boolean}
+ */
+var isSymmetric = function(root) {
+    return check(root, root);
+};
+
+const check = (p, q) => {
+    const arr = [];
+    arr.push(p);
+    arr.push(q);
+
+    while (arr.length) {
+        let u = arr.shift();
+        let v = arr.shift();
+        if (u === null && v === null) {
+            continue;
+        }
+        if ((u === null || v === null) || (u.val !== v.val)) {
+            return false;
+        }
+        arr.push(u.left);
+        arr.push(v.right);
+        arr.push(u.right);
+        arr.push(v.left);
+    }
+    return true;
+}
+```
+
+
+
+----
+
+## **BM32** **合并二叉树**
+
+给你两棵二叉树： root1 和 root2 。
+
+想象一下，当你将其中一棵覆盖到另一棵之上时，两棵树上的一些节点将会重叠（而另一些不会）。你需要将这两棵树合并成一棵新二叉树。合并的规则是：如果两个节点重叠，那么将这两个节点的值相加作为合并后节点的新值；否则，不为 null 的节点将直接作为新二叉树的节点。
+
+返回合并后的二叉树。
+
+注意: 合并过程必须从两个树的根节点开始。
+
+提示：
+
+两棵树中的节点数目在范围 [0, 2000] 内
+-104 <= Node.val <= 104
+
+**深度优先搜索（递归）**
+
+```js
+function TreeNode(val, left, right){
+    this.val = (val === undefined ? 0 : val);
+    this.left = (left === undefined ? null : left);
+    this.right = (right === undefined ? null : right);
+}
+
+/**
+ * @param {TreeNode} root1
+ * @param {TreeNode} root2
+ * @return {TreeNode}
+ */
+
+var mergeTrees = function(root1, root2) {
+    if (root1 == null){
+        return root2;
+    }
+    if (root2 == null) {
+        return root1;
+    }
+    root1.val = root1.val + root2.val;
+    root1.left = mergeTrees(root1.left, root2.left);
+    root1.right = mergeTrees(root1.right, root2.right);
+    return root1;
+};
+
+let nums=[2,7,9,3,1];
+let result=rob(nums);
+console.log(result);
+```
+
+时间复杂度：O(min(m,n))，对两个二叉树同时进行深度优先搜索，只有当两个二叉树中的对应节点都不为空时才会对该节点进行显性合并操作，因此被访问到的节点数不会超过较小的二叉树的节点数。
+
+空间复杂度：O(min(m,n))，空间复杂度取决于递归调用的层数，递归调用的层数不会超过较小的二叉树的最大高度，最坏情况下，二叉树的高度等于节点数。
+
+**广度优先搜索**
+
+```js
+function TreeNode(val, left, right){
+    this.val = (val === undefined ? 0 : val);
+    this.left = (left === undefined ? null : left);
+    this.right = (right === undefined ? null : right);
+}
+
+/**
+ * @param {TreeNode} root1
+ * @param {TreeNode} root2
+ * @return {TreeNode}
+ */
+
+var mergeTrees = function(root1, root2) {
+    if (root1 == null){
+        return root2;
+    }
+    if (root2 == null) {
+        return root1;
+    }
+    const root3 = new TreeNode(root1.val + root2.val);
+    const queue1 = [root1];
+    const queue2 = [root2];
+    const queue3 = [root3];
+
+    while (queue1.length > 0 && queue2.length > 0){
+        let node3 = queue3.pop();
+        let node1 = queue1.pop();
+        let node2 = queue2.pop();
+        if (node1.left !== null || node2.left !== null) {
+            if (node1.left !== null && node2.left !== null) {
+                node3.left = new TreeNode(node1.left.val + node2.left.val);
+                queue1.push(node1.left);
+                queue2.push(node2.left);
+                queue3.push(node3.left);
+            }else if (node1.left !== null){
+                node3.left = node1.left;
+            }else if (node2.left !== null){
+                node3.left = node2.left;
+            }
+        }
+        if (node1.right !== null || node2.right !== null) {
+            if (node1.right !== null && node2.right !== null) {
+                node3.right = new TreeNode(node1.right.val + node2.right.val);
+                queue1.push(node1.right);
+                queue2.push(node2.right);
+                queue3.push(node3.right);
+            }else if (node1.right !== null){
+                node3.right = node1.right;
+            }else if (node2.right !== null){
+                node3.right = node2.right;
+            }
+        }
+    }
+    return root3;
+};
+
+```
 
 
 
